--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Auto Carousel Web Component</title>
+    <title>Toaster Web Component</title>
     <link rel="stylesheet" href="styles.css">
     <!-- Loding Google Font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" />
@@ -15,10 +15,6 @@
     <script src="./index.js"></script>
   </head>
   <body>
-    <auto-carousel length="5">
-      <!-- <div slot="default">
-        Hello this is default text.
-      </div> -->
-    </auto-carousel>
+    <vj-toaster></vj-toaster>
   </body>
 </html>
