toaster message styling is done

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <script src="./index.js"></script>
   </head>
   <body>
-    <vj-toaster></vj-toaster>
+    <vj-toaster>
+      <div slot="message">
+        I am toaster message vareee var what a tremendous improvement
+      </div>
+    </vj-toaster>
   </body>
 </html>
