--- a/index.html
+++ b/index.html
@@ -4,15 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Toaster Web Component</title>
-    <link rel="stylesheet" href="styles.css">
     <!-- Loding Google Font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" />
 
     <!-- Loading Web component loader -->
-    <script src="node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
-
-    <!-- Auto carousel web component -->
-    <script src="./index.js"></script>
+    <script src="webcomponents/webcomponents-loader.js"></script>
   </head>
   <body>
     <vj-toaster>
